fix blog header spacing/sizing

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -48,6 +48,10 @@ h1, h2, h3, h4, h5, h6,
   margin: 0
   padding: 0
 
+h4
+  font-size: 1.5rem
+  font-weight: 400
+
 section
   padding: 0 8rem 3rem
   display: block
@@ -303,6 +307,7 @@ section
   font-weight: 600
   line-height: 1.15em
   stroke: 2px solid outside
+  margin-bottom: 2rem
 
 .areahead
   font-size: 1.5rem
@@ -407,7 +412,6 @@ section
         flex-wrap: wrap
         justify-content: flex-start
         align-items: center
-        margin-block-start: 1em
         margin-block-end: 1em
         margin-inline-start: 0
         margin-inline-end: 0
@@ -422,6 +426,7 @@ section
 
   .bloghead
     font-size: 1.75em
+    margin-bottom: 1.5rem
 
 @media screen and (min-width: $break-large)
 
